--- a/Steam(wpf)/App.xaml
+++ b/Steam(wpf)/App.xaml
@@ -34,5 +34,11 @@
             <Setter Property="Padding" Value="7 0 0 0"/>
             <Setter Property="Height" Value="25"/>
         </Style>
+
+        <Style x:Key="frameChanger" TargetType="Label">
+            <Setter Property="Foreground" Value="#D2D2D2"/>
+            <Setter Property="HorizontalContentAlignment" Value="Center"/>
+            <Setter Property="FontSize" Value="23"/>
+        </Style>
     </Application.Resources>
 </Application>
