--- a/Steam(wpf)/App.xaml
+++ b/Steam(wpf)/App.xaml
@@ -40,5 +40,16 @@
             <Setter Property="HorizontalContentAlignment" Value="Center"/>
             <Setter Property="FontSize" Value="23"/>
         </Style>
+
+        <Style x:Key="menuStyle" TargetType="Menu">
+            <Setter Property="Background" Value="#2A2E33"/>
+            <Setter Property="Foreground" Value="#D2D2D2"/>
+        </Style>
+
+        <Style x:Key="menuItemStyle" TargetType="MenuItem">
+            <Setter Property="Background" Value="#2A2E33"/>
+            <Setter Property="Foreground" Value="#D2D2D2"/>
+            <Setter Property="BorderBrush" Value="#2A2E33"/>
+        </Style>
     </Application.Resources>
 </Application>
