--- a/Steam(wpf)/profilePage.xaml
+++ b/Steam(wpf)/profilePage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Steam_wpf_.libraryPage"
+﻿<Page x:Class="Steam_wpf_.profilePage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,9 +6,9 @@
       xmlns:local="clr-namespace:Steam_wpf_"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="libraryPage">
+      Title="profilePage">
 
     <Grid>
-        <Label Content="library" Foreground="White"/>
+        <Label Content="profile" Foreground="White"/>
     </Grid>
 </Page>
