--- a/Steam(wpf)/storePage.xaml
+++ b/Steam(wpf)/storePage.xaml
@@ -9,6 +9,26 @@
       Title="storePage">
 
     <Grid>
-        <Label Content="store" Foreground="White"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="25*"/>
+            <ColumnDefinition Width="75*"/>
+        </Grid.ColumnDefinitions>
+
+        <ListView Name="genresList" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
+            <ListView.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <WrapPanel HorizontalAlignment="Center"></WrapPanel>
+                </ItemsPanelTemplate>
+            </ListView.ItemsPanel>
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <Grid Width="190" HorizontalAlignment="Center" Height="20">
+                        <StackPanel>
+                            <TextBlock Text="{Binding genreName}" FontSize="14"/>
+                        </StackPanel>
+                    </Grid>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
     </Grid>
 </Page>
